[metadata]
package_name = repostats
description = Library for gleaning Git package statistics for organizations
long_description = Library for gleaning Git package statistics for organizations
author = STScI
author_email = sosey@stsci.edu
license = BSD
edit_on_github = False
github_project = spacetelescope/repostats
description-file = README.rst
url = http://www.stsci.edu/
homepage = http:://www.stsci.edu/

[build-sphinx]
source-dir = docs
build-dir = docs
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build relic

[flake8]
ignore = E126,E128,E501
exclude = setup.py

[entry_points]

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
